cmake_minimum_required(VERSION 3.19)
project(House_Prediction_Work)

set(CMAKE_CXX_STANDARD 14)

add_executable(House_Prediction_Work
        "Debug/House Prediction Work.exe"
        "Debug/House Prediction Work.ilk"
        "Debug/House Prediction Work.pdb"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/CL.command.1.tlog"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/CL.read.1.tlog"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/CL.write.1.tlog"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/House Prediction Work.lastbuildstate"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/link.command.1.tlog"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/link.read.1.tlog"
        "House Prediction Work/Debug/House Pr.8aa788b5.tlog/link.write.1.tlog"
        "House Prediction Work/Debug/House Prediction Work.exe.recipe"
        "House Prediction Work/Debug/House Prediction Work.ilk"
        "House Prediction Work/Debug/House Prediction Work.log"
        "House Prediction Work/Debug/main.obj"
        "House Prediction Work/Debug/vc142.idb"
        "House Prediction Work/Debug/vc142.pdb"
        "House Prediction Work/Release/House Pr.8aa788b5.tlog/CL.command.1.tlog"
        "House Prediction Work/Release/House Pr.8aa788b5.tlog/House Prediction Work.lastbuildstate"
        "House Prediction Work/Release/House Pr.8aa788b5.tlog/unsuccessfulbuild"
        "House Prediction Work/Release/House Prediction Work.log"
        "House Prediction Work/Release/vc142.pdb"
        "House Prediction Work/House Prediction Work.vcxproj"
        "House Prediction Work/House Prediction Work.vcxproj.filters"
        "House Prediction Work/House Prediction Work.vcxproj.user"
        "House Prediction Work/in.txt"
        "House Prediction Work/main.c"
        "House Prediction Work/out.txt"
        "House Prediction Work/test.txt"
        "House Prediction Work.sln")
